2001-05-22  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (xml_parse_conf): It's path, not point.

2001-05-20  Theo van Klaveren <t.vanklaveren@student.utwente.nl>

	* filesys.pl.in (xst_filesys_mount_cmd_parse): New function,
	parses output from 'mount -p' on FreeBSD.

	* platform.pl.in (check_freebsd): New function, double-checks
	FreeBSD version by querying the sysctl kern.version.
	(xst_platform_guess): Also check for FreeBSD.

	* shares-conf.in: Add FreeBSD to supported platforms.

	* users-conf.in: Add FreeBSD to supported platforms. Add paths
	for shadow_names, login_defs_names and skel_dir on FreeBSD.
	(read_passwd_shadow): Munge shell comments from passwd and
	shadow_passwd.

2001-05-21  Arturo Espinosa Aldama  <arturo@ximian.com>

	* xml.pl.in (xst_xml_scan): Use new debug_print_log func.

	* users-conf.in (change_user): Just changed arg order to
	make it easier to compare it with man page when checking
	compatibility.

	* replace.pl.in (xst_replace_sh): Changed behaviour so that
	shell var will be expunged from file if $value eq "".
	(xst_replace_sh_join): Implemented. Required by network:suse70

	* platform.pl.in (check_lsb): Check through lsb file, which
	may make our lives easier in the near future.
	check_*: use $xst_prefix to check platform too.

	* network.pl.in (xst_network_suse70_active_interfaces_get):
	Don't list "lo" as an active interface.
	(xst_network_suse70_ifaces_get_existing): Better code:
	finds all NETDEV vars in rc.config and takes values from there.
	(xst_network_suse70_parse_iface_num): Braking the 4
	interface barrier here too. SuSE 7.0 scripts are broken, still.
	(xst_network_suse70_set_ifconfig_arg): Beautified output.
	(xst_network_suse70_get_file): Completly missed implemening
	this one. New interfaces weren't getting a NETDEV number.
	(xst_network_get_file): "suse-7.0" entry added.
	(xst_network_suse70_interface_delete): Was calling activate
	_by_dev with wrong value for $dev.