@@ -169,6 +169,11 @@ sub xst_boot_set_global
   my ($file, $key, $val) = @_;
   my ($buff, $i, $found);
 
+  # quote globals with spaces if neccecary (append=mem=128 param2=122)
+  if ($val =~ /^\S+\s+\S+/ && !($val =~ /^\".+\"/)) {
+    $val = "\"" . $val . "\"";
+  }
+  
   $buff = &xst_file_buffer_load ($file);
   $found = 0;
 
