@@ -1,3 +1,8 @@
+2001-05-23  Tambet Ingo  <tambet@ximian.com>
+
+	* boot.pl.in (xst_boot_set_global): Quote globals with spaces
+	if neccecary.
+
 2001-05-22  Hans Petter Jansson  <hpj@ximian.com>
 
 	* shares-conf.in (xml_parse_conf): It's path, not point.
